--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link href="/normalize.css" rel="stylesheet">
+  
   <style>
     header {
       text-align: center;
@@ -10,7 +10,7 @@
       color: white;
     }
     body {
-        background-image:url("pics/anotherone.jpeg") ;
+        background-image:url("assets/images/anotherone.jpeg") ;
     }
     .project-links{
         color: black;
@@ -74,7 +74,7 @@
 </head>
 <body>
   <header>
-    <img src="pics/moe.jpg">
+    <img src="assets/images/moe.jpg">
     <h1>Moe Data</h1>
     <ul>
       <li><a href="https://public.tableau.com/app/profile/maurice.colon">Tableau</a></li>
@@ -85,25 +85,25 @@
   <article>
     <h2>Airbnb Dashboard Project</h2>
     <p>The "Airbnb Data Analysis Project" is a comprehensive data analysis and visualization project that focuses on exploring and deriving insights from a dataset related to Airbnb listings. This project aims to leverage data analytics techniques to uncover meaningful patterns, trends, and actionable insights to aid stakeholders in making informed decisions and improving their understanding of Airbnb listings.</p>
-    <img src="pics/Dashboard 1 (1).png" class="shrink-image">
+    <img src="assets/images/Dashboard 1 (1).png" class="shrink-image">
     <button><a href="https://public.tableau.com/app/profile/maurice.colon/viz/AirBNBRe-Create/Dashboard1" class="project-links" target="_blank">Go to Project</a></button>
   </article>
   <article>
     <h2>ETL-Project-Polygon API</h2>
     <p>This project aims to develop a Python script that requests financial data for a batch of 5 stock tickers from the Polygon API, saves this data into a CSV file, and generates a comprehensive report using the CSV data. The report includes the standard deviation of each stock's performance for the years 2021 and 2022.</p>
-    <img src="pics/CODEsnippet.png" class="shrink-image">
+    <img src="assets/images/CODEsnippet.png" class="shrink-image">
     <button><a href="https://github.com/mjcolon218/Stock-Performance-ETL-Project" class="project-links" target="_blank">Go to Project</a></button>
   </article>
   <article>
     <h2>Covid-19 Project</h2>
     <p>The "The "COVID-19 Dataset Analysis and Visualization" project is a comprehensive data analysis endeavor that focuses on exploring and analyzing the COVID-19 dataset to extract valuable insights and visualize trends related to the global pandemic. This project aims to provide a deeper understanding of the virus's impact, facilitate informed decision-making, and aid in formulating effective strategies to mitigate its effects.</p>
-    <img src="pics/Covid-19 Dashboard.png" class="shrink-image">
+    <img src="assets/images/Covid-19 Dashboard.png" class="shrink-image">
     <button><a href="https://public.tableau.com/app/profile/maurice.colon/viz/Covid-19Dashboard_16541225617890/Covid-19Dashboard" class="project-links" target="_blank">Go to Project</a></button>
   </article>
   <article>
     <h2>IMDB Movie Project</h2>
     <p>The "IMDb Movies Dataset Analysis" project is a comprehensive data analysis project that focuses on exploring and extracting valuable insights from the IMDb movies dataset. This project aims to uncover meaningful patterns, trends, and correlations within the dataset, enabling stakeholders to gain a deeper understanding of the movie industry and make data-informed decisions.</p>
-    <img src="pics/IBDMovies.png" class="shrink-image">
+    <img src="assets/images/IBDMovies.png" class="shrink-image">
     <button><a href="https://public.tableau.com/app/profile/maurice.colon/viz/IMDBReCreateMovies/Dashboard1" class="project-links" target="_blank">Go to Project</a></button>
   </article>
   <article>
@@ -111,14 +111,14 @@
     <p>The aim of this project was to investigate whether there is a correlation between a country's Corruption Perceptions Index (CPI) and its Environment Performance Index (EPI). To do this, I loaded two datasets - epi_countries from the epi PostgreSQL database and cpi dataset from a CSV file - and created dataframes from each of them. The cpi dataframe contained information about various environmental health metrics such as air health, water health, forestries, and others for each country in the list. The epi dataframe contained each country's Corruption Perceptions Index. A higher CPI indicates that a country is better at handling corruption.
 
 I used seaborn plots to create visualizations to see if there was any connection between the CPI and environment health categories. When making the plots on the CPI and EPI, we could infer that countries that handle corruption better have a higher EPI. However, when I made graphs on separate categories like the CPI's impact on forestry, the connection wasn't obvious. Some countries with a low CPI had a high index on forestry.</p>
-<img src="pics/snippetofcode.png" class="shrink-image">
+<img src="assets/images/snippetofcode.png" class="shrink-image">
 
 <button><a href="https://github.com/mjcolon218/EPI_2010_ETL_Project" class="project-links" target="_blank">Go to Project</a></button>
   </article>
   <article>
     <h2>Webscraping-Twitter-BeautifulSoup-Selenium</h2>
     <p>The "Twitter Scraper with Selenium and BeautifulSoup" is a Python-based project hosted on GitHub that allows users to scrape data from Twitter using Selenium and BeautifulSoup libraries. The project aims to provide a convenient way to extract information from Twitter by automating the web scraping process.</p>
-    <img src="pics/Twitter Bot.png" class="shrink-image">
+    <img src="assets/images/Twitter Bot.png" class="shrink-image">
     <button><a href="https://github.com/mjcolon218/Twitter-Bot" class="project-links" target="_blank">Go to Project</a></button>
   </article>
   </script>
